removed skype and added instagram

--- a/index.html
+++ b/index.html
@@ -79,10 +79,12 @@
             class="btn popoverData" data-content="call me" title="call me" rel="popover" data-placement="left" data-trigger="hover">
             <i class="fa fa-phone"></i>
         </a>
+        <!--
         <a href="skype:nlohmann?chat"
             class="btn popoverData" data-content="chat with me" title="chat with me" rel="popover" data-placement="left" data-trigger="hover">
             <i class="fa fa-skype"></i>
         </a>
+        -->
         <a href="http://dblp.uni-trier.de/pers/hd/l/Lohmann:Niels.html"
             class="btn popoverData" data-content="my publications" title="my publications" rel="popover" data-placement="right" data-trigger="hover">
             <i class="fa fa-book"></i>
@@ -130,6 +132,10 @@
         <a href="http://blog.nlohmann.me"
             class="btn popoverData" data-content="my blog" title="my blog" rel="popover" data-placement="left" data-trigger="hover">
             <i class="fa fa-comment"></i>
+        </a>
+        <a href="https://www.instagram.com/nlohmann/"
+            class="btn popoverData" data-content="my photos" title="my photos" rel="popover" data-placement="left" data-trigger="hover">
+            <i class="fa fa-instagram"></i>
         </a>
         <a href="https://vimeo.com/nlohmann"
             class="btn popoverData" data-content="my videos" title="my videos" rel="popover" data-placement="left" data-trigger="hover">
