:fire: remove Facebook

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="contact" content="mail@nlohmann.me">
     <meta name="publisher" content="Niels Lohmann">
     <meta name="copyright" content="Niels Lohmann">
-    <meta name="description" content="Niels Lohmann, Postdoc researcher at the University of Rostock">
-    <meta name="keywords" content="Niels, Lohmann, University, of, Rostock, Germany">
+    <meta name="description" content="Niels Lohmann, Navigation Engineering Lead">
+    <meta name="keywords" content="Niels, Lohmann, MBition, Daimler, Carmeq, University, of, Rostock, Germany">
     <meta name="robots" content="index, follow">
     <meta name="DC.Creator" content="Niels Lohmann">
     <meta name="DC.Publisher" content="Niels Lohmann">
@@ -63,10 +63,6 @@
         <img src="resources/images/avatar.jpg" alt="Niels Lohmann" id="avatar">
         <noscript><br/></noscript>
 
-        <a href="http://www.informatik.uni-rostock.de/~nl"
-            class="btn popoverData" data-content="my university website" title="my university website" rel="popover" data-placement="left" data-trigger="hover">
-            <i class="fa fa-university"></i>
-        </a>
         <a href="mailto:mail@nlohmann.me"
             class="btn popoverData" data-content="email me" title="email me" rel="popover" data-placement="left" data-trigger="hover">
             <i class="fa fa-envelope"></i>
@@ -79,12 +75,6 @@
             class="btn popoverData" data-content="call me" title="call me" rel="popover" data-placement="left" data-trigger="hover">
             <i class="fa fa-phone"></i>
         </a>
-        <!--
-        <a href="skype:nlohmann?chat"
-            class="btn popoverData" data-content="chat with me" title="chat with me" rel="popover" data-placement="left" data-trigger="hover">
-            <i class="fa fa-skype"></i>
-        </a>
-        -->
         <a href="http://dblp.uni-trier.de/pers/hd/l/Lohmann:Niels.html"
             class="btn popoverData" data-content="my publications" title="my publications" rel="popover" data-placement="right" data-trigger="hover">
             <i class="fa fa-book"></i>
@@ -101,10 +91,6 @@
             class="btn popoverData" data-content="my questions and answers" title="my questions and answers" rel="popover" data-placement="right" data-trigger="hover">
             <i class="fa fa-stack-overflow"></i>
         </a>
-        <a href="https://flattr.com/profile/nlohmann"
-            class="btn popoverData" data-content="flattr me" title="flattr me" rel="popover" data-placement="right" data-trigger="hover">
-            <i class="fa fa-heart"></i>
-        </a>
         <a href="http://www.amazon.de/registry/wishlist/KQ7Q8JXTR93J/ref=cm_sw_r_tw_ws_SljhxbBY8TBV6"
             class="btn popoverData" data-content="my wishlist" title="my wishlist" rel="popover" data-placement="right" data-trigger="hover">
             <i class="fa fa-amazon"></i>
@@ -120,10 +106,6 @@
         <a href="https://www.xing.com/profile/Niels_Lohmann"
             class="btn popoverData" data-content="my professional network" title="my professional network" rel="popover" data-placement="right" data-trigger="hover">
             <i class="fa fa-xing"></i>
-        </a>
-        <a href="https://www.facebook.com/niels.lohmann"
-            class="btn popoverData" data-content="my social network" title="my social network" rel="popover" data-placement="right" data-trigger="hover">
-            <i class="fa fa-facebook"></i>
         </a>
         <a href="https://foursquare.com/nlohmann"
             class="btn popoverData" data-content="my location" title="my location" rel="popover" data-placement="left" data-trigger="hover">
@@ -144,8 +126,8 @@
       </div>
         <div id="content_name">Niels Lohmann</div>
         <div id="content_description">
-            Senior Software Architect at MBition
-            <br><small>previously: <a href="http://www.carmeq.de">System Designer at Carmeq</a> and <a href="http://www.informatik.uni-rostock.de/~nl/">Postdoc researcher at the University of Rostock</a></small>
+            Navigation Engineering&nbsp;Lead at <a href="http://mbition.io">MBition</a>&nbsp;(Daimler)
+            <br><small>previously: <a href="http://www.carmeq.de">System&nbsp;Designer at Carmeq</a> and Postdoc&nbsp;researcher at the <a href="https://theo.informatik.uni-rostock.de">University&nbsp;of&nbsp;Rostock</a></small>
         </div>
     </div>
 
