:wrench: change address

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="DC.Creator" content="Niels Lohmann">
     <meta name="DC.Publisher" content="Niels Lohmann">
     <meta name="DC.Rights" content="Niels Lohmann">
-    <meta name="DC.Description" content="Niels Lohmann, Postdoc researcher at the University of Rostock">
+    <meta name="DC.Description" content="Niels Lohmann, Navigation Engineering Lead at MBition">
     <meta name="DC.Language" content="en-us">
     <link rel="stylesheet" type="text/css" href="resources/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="resources/css/bootstrap.min.css">
@@ -133,7 +133,7 @@
 
     <div id="metadata" itemscope itemtype="http://schema.org/Person">
         <span itemprop="name">Niels Lohmann</span>
-        <span itemprop="jobTitle">Postdoc</span>
+        <span itemprop="jobTitle">Navigation Engineering Lead</span>
         <span itemprop="email">mail@nlohmann.me</span>
         <span itemprop="gender">male</span>
         <span itemprop="familyName">Lohmann</span>
@@ -142,23 +142,23 @@
 
         <span itemprop="affiliation" itemscope
            itemtype="http://data-vocabulary.org/Organization">
-           <span itemprop="name">University of Rostock</span>
+           <span itemprop="name">MBition</span>
 
            <span itemprop="location" itemscope
               itemtype="http://data-vocabulary.org/PostalAddress">
-              <span itemprop="addressLocality">Rostock</span>
+              <span itemprop="addressLocality">Berlin</span>
               <span itemprop="addressCountry">DE</span>
            </span>
         </span>
 
         <span itemprop="address" itemscope
            itemtype="http://data-vocabulary.org/PostalAddress">
-           <span itemprop="addressLocality">Rostock</span>
+           <span itemprop="addressLocality">Berlin</span>
            <span itemprop="addressCountry">DE</span> 
         </span>
 
-        <a href="http://www.informatik.uni-rostock.de/~nl" itemprop="url">website</span>
-        <a href="http://www.informatik.uni-rostock.de/~nl/resources/img/nlohmann.jpg" itemprop="image">photo</a>
+        <a href="http://nlohmann.me" itemprop="url">website</span>
+        <a href="http://nlohmann.me/resources/images/avatar.jpg" itemprop="image">photo</a>
     </div>
   </body>
 
